--- a/WebApplication/appsettings.Development.json
+++ b/WebApplication/appsettings.Development.json
@@ -1,8 +1,3 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "TheConfiguration": "This is the Development."
 }
